@@ -1,3 +1,4 @@
+	* added option to not recheck on missing or incomplete resume data
 	* extended stats logging with statistics=on builds
 	* added new session functions to more efficiently query torrent status
 	* added alerts for added and removed torrents
